Fix Layout issues

--- a/interactive-card-details-form-main/style.css
+++ b/interactive-card-details-form-main/style.css
@@ -269,13 +269,6 @@ input::placeholder {
   }
   .card-details-form {
     min-width: 400px;
-    /* border: 2px solid red; */
+    max-width: 500px;
   }
 }
-
-/* @media (max-width: 700px) {
-  .card--intro {
-    display: none;
-    visibility: hidden;
-  }
-} */
